--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,9 @@ body {
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
+  width: 1600px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .hero-title {
@@ -320,6 +323,10 @@ body {
   margin-right: 30px;
 }
 
+.members-list .members-item {
+  border-radius: 0px 0px 4px 4px;
+}
+
 .member-container .member {
   margin-top: 30px;
 
@@ -341,7 +348,6 @@ body {
 .team {
   margin: 0;
   background-color: var(--third-bg-color);
-  box-shadow: 0px 4px 4px rgba(00, 00, 00, 0.25);
 }
 
 .members-list .members-item {
@@ -486,10 +492,11 @@ body {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
 }
 
 .footer-socials-link:hover,
-.footer-socials-link:focus{
+.footer-socials-link:focus {
   background-color: var(--accent);
 }
 
@@ -529,7 +536,7 @@ body {
 }
 
 .buttons-list .item:hover,
-.buttons-list .item:focus{
+.buttons-list .item:focus {
   box-shadow: 0px 4px 4px rgba(00, 00, 00, 0.25);
 }
 
@@ -550,16 +557,22 @@ body {
 
 .projects-list .item {
   flex-basis: calc((100% - 60px) / 3);
-  border: 1 px solid #eeeeee;
 }
 
-.projects-list .item:hover,
-.projects-list .item:focus {
-  box-shadow: 0px 4px 4px rgba(00, 00, 00, 0.25);
+.project-link {
+  display: block;
+  color: inherit;
+}
+
+.project-link:hover,
+.project-link:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .project-container {
   padding: 20px 24px;
+  border: 1px solid #eeeeee;
+  border-top: none;
 }
 
 .project-container .project-title {
