--- a/css/styles.css
+++ b/css/styles.css
@@ -477,6 +477,10 @@ body {
 .footer-socials-title {
   color: var(--white-color);
   margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 
 .footer-socials-list {
