--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,7 @@ body {
 .header-nav .link:hover,
 .header-nav .link:focus {
   color: var(--accent);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-nav .link.current {
@@ -175,6 +176,7 @@ body {
 .header-contacts .link:hover,
 .header-contacts .link:focus {
   color: var(--accent);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-icon {
@@ -185,6 +187,33 @@ body {
 .link:hover .header-icon,
 .link:focus .header-icon {
   fill: var(--accent);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link {
+  position: relative;
+  display: block;
+}
+
+.link.nav-link::after {
+  content: "";
+
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent);
+  color: var(--accent);
+
+  transform: scaleX(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link:hover::after {
+  transform: scaleX(1);
 }
 
 /*------Section-title------*/
@@ -254,6 +283,48 @@ body {
 .hero-button:hover,
 .hero-button:focus {
   background-color: var(--hero-button-bg);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  width: 528px;
+  height: 581px;
+  background-color: var(--white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 8px;
+  margin-right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: var(--white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 /*------Benefits-list------*/
@@ -310,6 +381,27 @@ body {
 
 .work-list .item:not(:last-child) {
   margin-right: 30px;
+}
+
+.work-item-container {
+  position: relative;
+}
+
+.work-text-top {
+  position: absolute;
+  bottom: 0;
+
+  width: 100%;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: var(--white-color);
+  background-color: rgba(47, 48, 58, 0.8);
 }
 
 /*------Members-list------*/
@@ -377,6 +469,7 @@ body {
 .social-link:hover,
 .social-link:focus {
   background-color: var(--accent);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
@@ -389,6 +482,7 @@ body {
 .social-link:hover .social-icon,
 .social-link:focus .social-icon {
   fill: var(--white-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*------Clients------*/
@@ -414,6 +508,7 @@ body {
 .client-link:hover,
 .client-link:focus {
   border: 1px solid var(--accent);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-icon {
@@ -427,6 +522,7 @@ body {
 .client-link:hover .client-icon,
 .client-link:focus .client-icon {
   fill: var(--accent);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*------Footer------*/
@@ -468,6 +564,7 @@ body {
 .footer-contacts .link:hover,
 .footer-contacts .link:focus {
   color: var(--accent);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-socials {
@@ -502,6 +599,7 @@ body {
 .footer-socials-link:hover,
 .footer-socials-link:focus {
   background-color: var(--accent);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-socials-icon {
@@ -542,6 +640,7 @@ body {
 .buttons-list .item:hover,
 .buttons-list .item:focus {
   box-shadow: 0px 4px 4px rgba(00, 00, 00, 0.25);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons-list .button:hover,
@@ -551,6 +650,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects-list {
@@ -571,6 +671,31 @@ body {
 .project-link:hover,
 .project-link:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.project-top-text {
+  position: absolute;
+  top: 0;
+  height: 100%;
+
+  color: var(--white-color);
+  background-color: rgba(33, 150, 243, 0.9);
+  font-size: 18px;
+  line-height: 1.55;
+  padding: 63px 24px;
+
+  transform: translateY(100%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-link:hover .project-top-text {
+  transform: translateY(0);
 }
 
 .project-container {
