--- a/css/styles.css
+++ b/css/styles.css
@@ -139,12 +139,12 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-nav .link:hover,
 .header-nav .link:focus {
   color: var(--accent);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-nav .link.current {
@@ -171,23 +171,24 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contacts .link:hover,
 .header-contacts .link:focus {
   color: var(--accent);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-icon {
   margin-right: 10px;
   fill: var(--primary-color-text);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover .header-icon,
 .link:focus .header-icon {
   fill: var(--accent);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link {
@@ -200,7 +201,7 @@ body {
 
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
 
   display: block;
   width: 100%;
@@ -278,12 +279,12 @@ body {
   line-height: 1.87;
   letter-spacing: 0.06em;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
 .hero-button:focus {
   background-color: var(--hero-button-bg);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop {
@@ -293,11 +294,13 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 500ms linear, visibility 500ms linear;
 }
 
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
 }
 
 .modal {
@@ -323,7 +326,7 @@ body {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background: var(--white-color);
+  background-color: var(--white-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -464,12 +467,13 @@ body {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
 .social-link:focus {
   background-color: var(--accent);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
@@ -477,12 +481,13 @@ body {
   justify-content: center;
   align-items: center;
   fill: var(--icons-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover .social-icon,
 .social-link:focus .social-icon {
   fill: var(--white-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*------Clients------*/
@@ -503,12 +508,13 @@ body {
   height: 92px;
   border: 1px solid var(--icons-color);
   border-radius: 4px;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover,
 .client-link:focus {
   border: 1px solid var(--accent);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-icon {
@@ -517,12 +523,13 @@ body {
   align-items: center;
 
   fill: var(--icons-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover .client-icon,
 .client-link:focus .client-icon {
   fill: var(--accent);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*------Footer------*/
@@ -553,6 +560,8 @@ body {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.71;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-contacts .address {
@@ -564,7 +573,6 @@ body {
 .footer-contacts .link:hover,
 .footer-contacts .link:focus {
   color: var(--accent);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-socials {
@@ -593,13 +601,14 @@ body {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  background: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.1);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-socials-link:hover,
 .footer-socials-link:focus {
   background-color: var(--accent);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-socials-icon {
@@ -631,6 +640,12 @@ body {
   font-size: 16px;
   line-height: 1.62;
   cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.buttons-list .item {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons-list .item:not(:last-child) {
@@ -640,7 +655,6 @@ body {
 .buttons-list .item:hover,
 .buttons-list .item:focus {
   box-shadow: 0px 4px 4px rgba(00, 00, 00, 0.25);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons-list .button:hover,
@@ -650,7 +664,6 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects-list {
@@ -666,12 +679,13 @@ body {
 .project-link {
   display: block;
   color: inherit;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-link:hover,
 .project-link:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-overlay {
@@ -691,10 +705,11 @@ body {
   padding: 63px 24px;
 
   transform: translateY(100%);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-link:hover .project-top-text {
+.project-link:hover .project-top-text,
+.project-link:focus .project-top-text {
   transform: translateY(0);
 }
 
